--- a/style.css
+++ b/style.css
@@ -123,8 +123,9 @@
   background-color: white;
   align-self: right;
   float: right;
-  width: 400px;
-  height: 300px;
+  min-width: 10vw;
+  max-width:50vw;
+  min-height: 10vh;
   border-radius: 10px;
   margin-top: 30px;
 }
