--- a/myAnimeList/themeLight.css
+++ b/myAnimeList/themeLight.css
@@ -1,4 +1,5 @@
 /*==============================*\
+| CSS_MAL                        |
 | Just shoot me already          |
 | R3                             |
 \*==============================*/
