--- a/betterdiscord/midnight.css
+++ b/betterdiscord/midnight.css
@@ -289,7 +289,7 @@ TABLE OF CONTENTS
 	--lvl-bg-fade:var(--bg-fade);	
 
 	/*Branding*/
-	--theme-name: 'Nanako UI';
+	--theme-name: 'Midnight UI';
 	--theme-version: '3';
 	--theme-alert-display: block;
 
